MB-50944 : Add cas to _eventing xattr on SBM

* Write CAS to _eventing xattrs along with seqno
* Prefer checking against CAS of the document if present.

Change-Id: I404c74c75e1e01f5d3fe4858d75ca907b7892e5b
Reviewed-on: https://review.couchbase.org/c/eventing/+/210152
Reviewed-by: Rishit Chaudhary <rishit.chaudhary@couchbase.com>
Tested-by: abhishekjindal <abhishek.jindal@couchbase.com>
Well-Formed: Restriction Checker