consumer/handle_messages.go
@@ -8,7 +8,6 @@ import (
 	"io"
 	"runtime/debug"
 	"strconv"
-	"strings"
 	"sync/atomic"
 
 	"github.com/couchbase/eventing/common"
@@ -488,15 +487,6 @@ func (c *Consumer) sendDeleteCidEvent(cid uint32, partition uint16, seqNo uint64
 	c.sendMessage(msg)
 }
 
-// Remove all the system xattr from map
-func filterXattr(xattr map[string]memcached.XattrVal) {
-	for key, _ := range xattr {
-		if strings.HasPrefix(key, memcached.SystemXattrPrefix) {
-			delete(xattr, key)
-		}
-	}
-}
-
 func (c *Consumer) sendDcpEvent(mKeyspace common.KeyspaceName, e *memcached.DcpEvent, sendToDebugger bool) {
 	m := dcpMetadata{
 		Cas:      strconv.FormatUint(e.Cas, 10),
@@ -528,8 +518,7 @@ func (c *Consumer) sendDcpEvent(mKeyspace common.KeyspaceName, e *memcached.DcpE
 	var dcpHeader, payload []byte
 	var hBuilder, pBuilder *flatbuffers.Builder
 	if e.Opcode == mcd.DCP_MUTATION {
-		filterXattr(e.Xattr)
-		xattr, _ := json.Marshal(e.Xattr)
+		xattr, _ := json.Marshal(e.UserXattrs)
 		dcpHeader, hBuilder = c.makeDcpMutationHeader(int16(e.VBucket), string(metadata))
 		payload, pBuilder = c.makeDcpPayload(e.Key, e.Value, xattr, isBinary)
 	} else if e.Opcode == mcd.DCP_DELETION || e.Opcode == mcd.DCP_EXPIRATION {
